--- a/server/.env
+++ b/server/.env
@@ -13,3 +13,7 @@ DB_PORT=3306
 # ------------------------
 PORT=5000
 NODE_ENV=development
+JWT_SECRET=Abhya1559
+ACCESS_TOKEN_SECRET=Abhya
+REFRESH_TOKEN_SECRET=Abhya
+SESSION_SECRET=Abhya
