forgot-password&&reset-password api done

--- a/server/.env
+++ b/server/.env
@@ -17,3 +17,5 @@ JWT_SECRET=Abhya1559
 ACCESS_TOKEN_SECRET=Abhya
 REFRESH_TOKEN_SECRET=Abhya
 SESSION_SECRET=Abhya
+GOOGLE_APP_PASSWORD=mzal bkil aabm iadp
+GOOGLE_EMAIL=abhyanand1559@gmail.com
